# deb-networking-mlnx

./: .coveragerc  .gitignore  .gitreview  PKG-INFO  README.rst  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
debian/: changelog  control  copyright  eswitch-sudoers  eswitchd.install  eswitchd.logrotate  eswitchd.upstart  networking-mlnx-common.install  networking-mlnx-eswitchd.init.in  networking-mlnx-eswitchd.install  networking-mlnx-eswitchd.upstart  neutron-mlnx-agent.init.in  python-networking-mlnx.install  python-networking-mlnx.logrotate  rules  watch
debian/patches/: deleted_non_working_tests.patch  series
devstack/: README.rst  plugin.sh  settings
devstack/lib/: README.rst  eswitchd  mlnx_dnsmasq  neutron_ml2_mlnx
doc/source/: conf.py  index.rst  installation.rst  usage.rst
etc/neutron/: eswitchd-rootwrap.conf
etc/neutron/plugins/ml2/: eswitchd.conf  ml2_conf.ini  ml2_conf_sdn.ini
etc/neutron/plugins/mlnx/: mlnx_conf.ini
etc/neutron/rootwrap.d/: eswitchd.filters
networking_mlnx/: _i18n.py
networking_mlnx/db/: db.py
networking_mlnx/db/migration/alembic_migrations/: env.py  script.py.mako
networking_mlnx/db/migration/models/: head.py
networking_mlnx/db/models/: sdn_journal_db.py  sdn_maintenance_db.py
networking_mlnx/dhcp/: mlnx_dhcp.py
networking_mlnx/eswitchd/: eswitch_daemon.py  eswitch_handler.py  msg_handler.py  resource_mngr.py
networking_mlnx/eswitchd/cli/: conn_utils.py  ebr_dbg.py  ebrctl.py  exceptions.py
networking_mlnx/eswitchd/common/: config.py  constants.py  exceptions.py
networking_mlnx/eswitchd/db/: device_db.py  eswitch_db.py
networking_mlnx/eswitchd/utils/: command_utils.py  helper_utils.py  pci_utils.py
networking_mlnx/hacking/: checks.py
networking_mlnx/journal/: cleanup.py  dependency_validations.py  journal.py  maintenance.py
networking_mlnx/plugins/mlnx/agent/: comm_utils.py  mlnx_eswitch_neutron_agent.py  utils.py
networking_mlnx/tests/unit/db/: test_db.py
networking_mlnx/tests/unit/dhcp/: test_mlnx_dhcp.py
tools/: i18n_cfg.py  misc-sanity-checks.sh
(+37 files in other folders)
