[metadata]
name = networking-mlnx
version = 8.0.0
summary = Mellanox Networking
description-file =
    README.rst
author = Mellanox
author-email = openstack@mellanox.com
home-page = http://www.mellanox.com/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[files]
packages =
    networking_mlnx

data_files =
    etc/neutron/plugins/ml2 =
        etc/neutron/plugins/ml2/ml2_conf_sdn.ini
    etc/neutron/plugins/mlnx =
        etc/neutron/plugins/mlnx/mlnx_conf.ini
    etc/neutron/plugins/ml2 =
        etc/neutron/plugins/ml2/eswitchd.conf
    etc/neutron/rootwrap.d =
        etc/neutron/rootwrap.d/eswitchd.filters
    etc/neutron/ =
        etc/neutron/eswitchd-rootwrap.conf


[global]
setup-hooks =
    pbr.hooks.setup_hook

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = networking-mlnx/locale/networking-mlnx.pot

[compile_catalog]
directory = networking-mlnx/locale
domain = networking-mlnx

[update_catalog]
domain = networking-mlnx
output_dir = networking-mlnx/locale
input_file = networking-mlnx/locale/networking-mlnx.pot

[wheel]
universal = 1

[entry_points]
console_scripts =
    neutron-mlnx-agent = networking_mlnx.plugins.ml2.drivers.mlnx.agent.mlnx_eswitch_neutron_agent:main
    eswitchd = networking_mlnx.eswitchd.eswitch_daemon:main
    ebrctl = networking_mlnx.eswitchd.cli.ebrctl:main
    eswitchd-rootwrap = oslo_rootwrap.cmd:main
neutron.ml2.mechanism_drivers =
    sdnmechdriver = networking_mlnx.plugins.ml2.drivers.sdn.sdn_mech_driver:SDNMechanismDriver
    mlnx = networking_mlnx.plugins.ml2.drivers.mlnx.mech_mlnx:MlnxMechanismDriver

